--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@prisma/client": "^6.0.1",
     "@stripe/stripe-js": "^5.3.0",
     "nuxt": "^3.14.1592",
-    "nuxt-icon": "^1.0.0-beta.7",
     "pinia": "^2.3.0",
     "prisma": "^6.0.1",
     "stripe": "^17.4.0",
@@ -28,8 +27,9 @@
     "vue-router": "latest"
   },
   "devDependencies": {
-    "nuxt-lodash": "^2.5.3",
+    "@nuxt/icon": "^1.10.2",
     "@types/node": "^18",
-    "nuxt":"^3.4.2"
+    "nuxt": "^3.4.2",
+    "nuxt-lodash": "^2.5.3"
   }
 }
