--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@iconify-json/ph": "^1.2.2",
     "@nuxt/icon": "^1.10.2",
     "@types/node": "^18",
     "nuxt": "^3.4.2",
