--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   "prisma": {
     "seed": "node prisma/seed.js"
   },
-  "dependencies": {
-    "@nuxtjs/supabase": "^1.4.4",
-    "@nuxtjs/tailwindcss": "^6.12.2",
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-    "@pinia/nuxt": "^0.5.0",
-    "@prisma/client": "^6.0.1",
-    "@stripe/stripe-js": "^5.3.0",
-    "nuxt": "^3.14.1592",
-    "pinia": "^2.3.0",
-    "prisma": "^6.0.1",
-    "stripe": "^17.4.0",
-    "vue": "latest",
-    "vue-router": "latest"
-  },
   "devDependencies": {
-    "@iconify-json/ph": "^1.2.2",
-    "@nuxt/icon": "^1.10.2",
-    "@types/node": "^18",
-    "nuxt": "^3.4.2",
-    "nuxt-lodash": "^2.5.3"
+    "@nuxtjs/supabase": "^0.3.5",
+    "@nuxtjs/tailwindcss": "^6.6.5",
+    "@types/node": "^18.15.11",
+    "nuxt": "^3.3.3",
+    "nuxt-icon": "^0.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "vue-stripe-js": "^1.0.1"
+  },
+  "dependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@pinia/nuxt": "^0.4.8",
+    "@prisma/client": "^4.12.0",
+    "@stripe/stripe-js": "^1.52.0",
+    "nuxt-lodash": "^2.4.1",
+    "pinia": "^2.0.34",
+    "prisma": "^4.12.0",
+    "stripe": "^12.0.0"
   }
 }
